# CRC_Agent

./: .gitattributes  .gitignore  _fix_mapping.txt  _fix_output.txt  _ftfy_fixed.py  _garbled_analysis.txt  _recovery_test_output.txt  pyproject.toml  start.txt
backend/: app.py
backend/api/adapters/: __init__.py  card_extractor.py  card_payload_sanitizer.py  event_normalizer.py  message_content.py  reference_normalizer.py  state_snapshot.py  test_patient_card_projection_backend.py  test_patient_identity_snapshot_backend.py  test_patient_self_report_card_assessment.py  test_patient_self_report_card_triage.py  test_text_encoding_guard.py  test_triage_question_card_backend.py
backend/api/routes/: __init__.py  assets.py  chat.py  database.py  patient_registry.py  sessions.py  test_patient_identity_api.py  test_uploads_api.py  uploads.py
backend/api/schemas/: database.py  events.py  patient_registry.py  responses.py
backend/api/services/: asset_service.py  chat_latency_trace.py  context_maintenance.py  database_intent_service.py  database_service.py  (+11 more)
docs/: build_current_architecture_docx.py  current-architecture-map.docx  current-architecture-map.md
frontend/: index.html  package-lock.json  package.json  playwright.acceptance.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
scripts/: capture_graph_fixtures.py  check_text_encoding.py  generate_exec_summary_pdf.py  generate_project_intro_pdf.py  prepare_acceptance_case_db.py  run_e2e_full_acceptance.ps1  run_real_case_browser_acceptance.cjs  start_backend_acceptance_fixture.ps1  start_backend_fixture.ps1  start_backend_real.ps1  start_frontend.ps1  start_real.cmd  start_real.ps1
src/: __init__.py  checkpoint.py  config.py  graph_builder.py  observability.py  state.py
src/langgraph_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nodes/: README.md  SELF_CORRECTION.md  __init__.py  assessment_nodes.before_external_restore.py  assessment_nodes.corrupted.backup.py  assessment_nodes.external_baseline.py  assessment_nodes.pre_restore_minimal.py  assessment_nodes.py  chat_main_node.py  citation_nodes.py  clinical_entry_nodes.py  clinical_nodes.py  database_nodes.py  decision_nodes.py  error_handler.py  evaluation_nodes.py  general_nodes.py  intent_nodes.py  knowledge_nodes.py  knowledge_utils.py  memory_nodes.py  node_utils.py  parallel_subagents.py  pathology_nodes.py  planner.py  policy.py  radiology_nodes.py  router.py  staging_nodes.py  sub_agent.py  tools_executor.py  triage_nodes.py
src/policies/: __init__.py  constants.py  diagnostics.py  review_policy.py  routing_policy.py  tool_targets.py  turn_facts.py  types.py
src/prompts/: __init__.py  assessment_prompts.py  database_prompts.py  decision_prompts.py  evaluation_prompts.py  general_prompts.py  intent_prompts.py  knowledge_prompts.py  planner_prompts.py
src/rag/: README.md  __init__.py  bm25_index.py  evidence.py  ingest.py  parser.py  reranker.py  retriever.py
src/services/: README.md  __init__.py  case_excel_service.py  document_converter.py  llm_service.py  local_hf_chat.py  patient_card_projector.py  provider_capabilities.py  virtual_database_service.py  web_search_service.py
src/tools/: README.md  __init__.py  basic_tools.py  card_formatter.py  clinical_tools.py  database_tools.py  pathology_clam_tools.py  radiomics_tools.py  rag_tools.py  tumor_localization_tools.py  tumor_screening_tools.py  web_search_tools.py
tests/: test_generate_project_intro_pdf.py
tests/backend/: test_app_cors.py  test_app_runtime_wiring.py  test_chat_latency_trace.py  test_chat_main_database_integration.py  test_database_schema_expansion.py  test_general_nodes.py  test_graph_builder_routing.py  test_graph_service_streaming.py  test_intent_nodes.py  test_node_utils_streaming.py  test_outpatient_triage_gating.py  test_outpatient_triage_repetition.py  test_patient_context_resolver.py  test_patient_event_sourcing.py  test_patient_registry_routes.py  test_patient_registry_service.py  test_rag_evidence_contract.py  test_rag_retriever.py  test_restore_legacy_database_and_assessment.py  test_scene_sessions.py  test_state_tools_executor_regressions.py  test_upload_registry_intake.py  test_vague_symptom_entry.py
tests/frontend/: conversation-panel.test.tsx  database-schema-expansion.test.tsx  setup.ts  stream-reducer.test.ts  test-utils.tsx  visible-cards.test.ts  workspace-scenes.test.tsx
(+139 files in other folders)
