[project]
name = "langgraph-agent-framework"
version = "0.2.0"
description = "LangGraph-based agent skeleton with Pydantic state, RAG hybrid retrieval, and observability."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.4",
    "langchain>=1.2.0",
    "langchain-core>=1.2.1",
    "langchain-openai>=1.1.1",
    "langchain-chroma>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.4.59",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "httpx>=0.28.1",
    "pypdf>=6.4.1",
    "unstructured>=0.18.21",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "streamlit>=1.52.1",
    # 混合检索新增依赖
    "rank-bm25>=0.2.2",  # BM25 关键词检索
    "jieba>=0.42.1",  # 中文分词
]

[project.optional-dependencies]
# 文档可视化处理增强 (PDF转图片视觉模式 + Word文档支持)
vision = [
    "pymupdf>=1.26.7",  # PDF 转图片，用于多模态 LLM 视觉识别
    "python-docx>=1.2.0",  # Word 文档解析
]
# OCR 支持 (用于扫描件PDF的文字识别)
ocr = [
    "pymupdf>=1.26.7",  # PDF 转图片
    "pytesseract>=0.3.13",  # Tesseract OCR Python 接口
    "pillow>=11.1.0",  # 图片处理
]
# Rerank 重排序支持
rerank = [
    "sentence-transformers>=2.2.0",  # Cross-Encoder 重排序模型
    "torch>=2.9.1",  # PyTorch
]
# Cohere Reranker (可选的云端重排序服务)
cohere = [
    "cohere>=5.0.0",  # Cohere API
]
# MinerU 高质量文档解析 (可选)
mineru = [
    "magic-pdf>=0.6.0",  # MinerU PDF解析
]
# Checkpoint 存储 (用于持久化 Graph 状态)
checkpoint = [
    "langgraph-checkpoint-sqlite>=2.0.0",  # SQLite 持久化
    "langgraph-checkpoint-postgres>=2.0.0",  # PostgreSQL 持久化
    "langgraph-checkpoint-redis>=2.0.0",  # Redis 持久化
]
# 完整功能安装
full = [
    "pymupdf>=1.26.7",
    "python-docx>=1.2.0",
    "pytesseract>=0.3.13",
    "pillow>=11.1.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.9.1",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-redis>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"

