[project]
name = "langgraph-agent-framework"
version = "0.2.0"
description = "LangGraph-based agent skeleton with Pydantic state, RAG hybrid retrieval, and observability."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.4",
    "langchain>=1.2.0",
    "langchain-core>=1.2.1",
    "langchain-openai>=1.1.1",
    "langchain-chroma>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.4.59",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "httpx>=0.28.1",
    "pypdf>=6.4.1",
    "unstructured>=0.18.21",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "streamlit>=1.52.1",
    # Mixed retrieval dependencies
    "rank-bm25>=0.2.2",  # BM25 keyword search
    "jieba>=0.42.1",  # Chinese word segmentation
]

[project.optional-dependencies]
# Document visualization enhancements (PDF-to-image vision mode + Word support)
vision = [
    "pymupdf>=1.26.7",  # PDF to images for multimodal vision
    "python-docx>=1.2.0",  # Word document parsing
]
# OCR support (for scanned PDFs)
ocr = [
    "pymupdf>=1.26.7",  # PDF to images
    "pytesseract>=0.3.13",  # Tesseract OCR Python bindings
    "pillow>=11.1.0",  # Image processing
]
# Rerank support
rerank = [
    "sentence-transformers>=2.2.0",  # Cross-encoder reranking
    "torch>=2.9.1",  # PyTorch
]
# Cohere reranker (optional cloud reranking service)
cohere = [
    "cohere>=5.0.0",  # Cohere API
]
# MinerU document parsing (optional)
mineru = [
    "magic-pdf>=0.6.0",  # MinerU PDF parsing
]
# Checkpoint storage (for persistent graph state)
checkpoint = [
    "langgraph-checkpoint-sqlite>=2.0.0",  # SQLite persistence
    "langgraph-checkpoint-postgres>=2.0.0",  # PostgreSQL persistence
    "langgraph-checkpoint-redis>=2.0.0",  # Redis persistence
]
# Full feature set
full = [
    "pymupdf>=1.26.7",
    "python-docx>=1.2.0",
    "pytesseract>=0.3.13",
    "pillow>=11.1.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.9.1",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-redis>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
